fixed navbar alignment

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,6 +6,7 @@ body {
   color: white;
 }
 ul.navbar {
+  text-align: left;
   width: 100%;
   background-color: #D6D6D6;
   padding-top: 20px;
